--- a/index.css
+++ b/index.css
@@ -3,5 +3,28 @@ html {
     justify-content: center;
     align-items: center;
     font-family: monospace;
-    font-size: 25px;
+    font-size: 50px;
+}
+
+body {
+    --black-075: #e4e6e8;
+    --black-300: #9fa6ad;
+    --black-800: #242729;
+    --white: #fff;
+}
+
+kbd {
+    display: inline-block;
+    margin: 0 .1em;
+    padding: .1em .6em;
+    font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+    font-size: 20px;
+    line-height: 1.4;
+    color: var(--black-800);
+    text-shadow: 0 1px 0 var(--white);
+    background-color: var(--black-075);
+    border: 1px solid var(--black-300);
+    border-radius: 3px;
+    box-shadow: 0 1px 1px rgba(12,13,14,0.15),inset 0 1px 0 0 var(--white);
+    white-space: nowrap;
 }
